--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -9,8 +9,7 @@ on:
 
 permissions:
   contents: read
-  pull-requests: write
-  issues: write
+  pull-requests: write  # Ensure this permission to add reviewers
 
 jobs:
   review_sql_scripts:
@@ -20,71 +19,44 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch full history for accurate diffing
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Check for CREATE statements in SQL files
-        id: check_sql_changes
+      - name: Detect CREATE statements in SQL files
+        id: detect_create_statements
         run: |
-          # Use explicit base and head SHAs for diffing
           CHANGED_FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | grep -E '\.github/sql_script/.*\.(sql|txt)$' || true)
-
           echo "Changed SQL files: $CHANGED_FILES"
 
-          # Initialize environment variable for script evaluation
           CREATE_STATEMENT_FOUND=false
-
           if [ -n "$CHANGED_FILES" ]; then
             for file in $CHANGED_FILES; do
-              if [ -f "$file" ]; then
-                echo "Analyzing file: $file"
-
-                # Remove single-line and multiline comments, then check for CREATE statements
-                SQL_CONTENT=$(sed -E '/^\s*--/d' "$file" | sed -E ':a;N;$!ba;s/\s*\/\*.*?\*\///g')
-                if echo "$SQL_CONTENT" | grep -iq "CREATE"; then
-                  CREATE_STATEMENT_FOUND=true
-                  echo "CREATE statement found in $file"
-                  break
-                fi
+              SQL_CONTENT=$(sed -E '/^\s*--/d' "$file" | sed -E ':a;N;$!ba;s/\s*\/\*.*?\*\///g')
+              if echo "$SQL_CONTENT" | grep -iq "CREATE"; then
+                CREATE_STATEMENT_FOUND=true
+                echo "CREATE statement found in $file"
+                break
               fi
             done
           fi
 
-          # Set the appropriate environment variable
-          if [ "$CREATE_STATEMENT_FOUND" = true ]; then
-            echo "create_script=true" >> "$GITHUB_ENV"
-          else
-            echo "create_script=false" >> "$GITHUB_ENV"
-          fi
+          echo "create_script=${CREATE_STATEMENT_FOUND}" >> $GITHUB_ENV
 
-      - name: Log message and assign reviewer
+      - name: Add reviewer if CREATE statements found
+        if: env.create_script == 'true'
         run: |
-          if [ "$create_script" = "true" ]; then
-            echo "✅ CREATE statement detected. Reviewer required: Notyou1231"
-            # Add reviewer to PR using GitHub CLI
-            gh pr edit ${{ github.event.pull_request.number }} --add-reviewer Notyou1231 || true
-          else
-            echo "ℹ️ No CREATE statement found. No reviewer required."
-          fi
+          echo "Assigning reviewer for PR #${{ github.event.pull_request.number }}"
+          gh pr edit ${{ github.event.pull_request.number }} --add-reviewer Notyou1231
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Notify if CREATE script is missing reviewer
-        if: failure() && env.create_script == 'true'
+      - name: Notify about reviewer
+        if: env.create_script == 'true'
         run: |
-          gh pr comment ${{ github.event.pull_request.number }} \
-            --body "⚠️ No reviewer was assigned. Please assign a reviewer manually."
+          gh pr comment ${{ github.event.pull_request.number }} --body "✅ Reviewer 'Notyou1231' has been added. Approval is required before merging."
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Review Notification
-        if: success() && env.create_script == 'true'
-        run: |
-          gh pr comment ${{ github.event.pull_request.number }} \
-            --body "✅ Reviewer has been assigned and PR is pending approval before merge."
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
