--- a/.github/workflows/reviewer.yml
+++ b/.github/workflows/reviewer.yml
@@ -35,9 +35,29 @@ jobs:
         # Set the result as an environment variable
         echo "create_found=$create_found" >> "$GITHUB_ENV"
         
-    # Step 3: Automatically approve the PR if no CREATE statements are found
+    # Step 3: Auto-approve the PR if no CREATE statements are found, and add bot as reviewer
     - name: Auto-approve PR if no CREATE statements found
       if: env.create_found == 'false'
-      uses: hmarr/auto-approve-action@v3
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        echo "No CREATE statements found. Adding GitHub Bot as a reviewer and auto-approving the PR."
+        # Add GitHub bot as reviewer
+        curl -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -d '{"reviewers":["github-bot"]}' \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers"
+        
+        # Auto-approve the PR
+        curl -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -d '{"event":"APPROVE"}' \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/reviews"
+
+    # Step 4: Add 'notyou1231' as a reviewer if CREATE statements are found
+    - name: Add 'notyou1231' as reviewer if CREATE statement is found
+      if: env.create_found == 'true'
+      run: |
+        echo "CREATE statements found. Adding 'Notyou1231' as a reviewer."
+        curl -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -d '{"reviewers":["Notyou1231"]}' \
+          "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/requested_reviewers"
